[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = "0.13"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-util = "0.3"
url = "2.3"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "signal"] }
